Disable the tray view dragging if the associated tray bubble is opened.

Changes,
1. Disable the tray view dragging if the app list is opened.
2. Disable the tray view dragging if the associated tray bubble is opened.

Test: SystemTrayTest*
Bug: 762326
Change-Id: I630165196dd831b8e0962c3a57e43dcc6590efbf