ash/system/tray_drag_controller.cc
@@ -22,15 +22,18 @@ void TrayDragController::ProcessGestureEvent(ui::GestureEvent* event,
     return;
   }
 
-  if (event->type() == ui::ET_GESTURE_TAP_DOWN) {
-    Shell::Get()->app_list()->Dismiss();
+  // Disable the tray view swiping if the app list is opened.
+  if (Shell::Get()->app_list()->IsVisible())
     return;
-  }
 
   tray_view_ = tray_view;
   is_on_bubble_ = event->target() != tray_view;
   if (event->type() == ui::ET_GESTURE_SCROLL_BEGIN) {
-    if (StartGestureDrag(*event))
+    StartGestureDrag(*event);
+
+    // Handles the event if the scroll sequence begins to scroll upward,
+    // otherwise the event should be handled by the shelf.
+    if (event->details().scroll_y_hint() < 0)
       event->SetHandled();
     return;
   }
@@ -56,32 +59,29 @@ void TrayDragController::ProcessGestureEvent(ui::GestureEvent* event,
   tray_view_->CloseBubble();
 }
 
-bool TrayDragController::StartGestureDrag(const ui::GestureEvent& gesture) {
+void TrayDragController::StartGestureDrag(const ui::GestureEvent& gesture) {
   if (!is_on_bubble_) {
-    // Dragging happens on the tray view. Close the bubble if there is already
-    // one opened. And return false to let shelf handle the event.
-    if (tray_view_->GetBubbleView()) {
-      tray_view_->CloseBubble();
-      return false;
-    }
+    // Dragging on the tray view when the tray bubble is opened should do
+    // nothing.
+    if (tray_view_->GetBubbleView())
+      return;
 
-    // If the scroll sequence begins to scroll downward, return false so that
-    // the event will instead by handled by the shelf.
+    // Should not open the tray bubble if the scroll sequence begins to scroll
+    // downward. The event will instead handled by the shelf.
     if (gesture.details().scroll_y_hint() > 0)
-      return false;
+      return;
 
     tray_view_->ShowBubble();
   }
 
   if (!tray_view_->GetBubbleView())
-    return false;
+    return;
 
   is_in_drag_ = true;
   gesture_drag_amount_ = 0.f;
   tray_bubble_bounds_ =
       tray_view_->GetBubbleView()->GetWidget()->GetWindowBoundsInScreen();
   UpdateBubbleBounds();
-  return true;
 }
 
 void TrayDragController::UpdateGestureDrag(const ui::GestureEvent& gesture) {
